cmake_minimum_required(VERSION 3.5.0)

include(CTest)
enable_testing()

add_executable(2.01.nullptr 2.01.nullptr.cpp)
add_executable(2.02.constexpr 2.02.constexpr.cpp)
add_executable(2.03.if.switch 2.03.if.switch.cpp)
add_executable(2.04.initializer.list 2.04.initializer.list.cpp)
add_executable(2.05.structured.binding 2.05.structured.binding.cpp)
add_executable(2.06.auto 2.06.auto.cpp)
add_executable(2.07.decltype 2.07.decltype.cpp)
add_executable(2.08.tail.return.type 2.08.tail.return.type.cpp)
add_executable(2.09.decltype.auto 2.09.decltype.auto.cpp)
add_executable(2.10.if.constexpr 2.10.if.constexpr.cpp)
add_executable(2.11.for.loop 2.11.for.loop.cpp)
add_executable(2.12.external.template 2.12.external.template.cpp)
add_executable(2.13.alias.template 2.13.alias.template.cpp)
add_executable(2.14.default.template.param 2.14.default.template.param.cpp)
add_executable(2.15.variadic.template.param 2.15.variadic.template.param.cpp)
add_executable(2.16.fold.expression 2.16.fold.expression.cpp)
add_executable(2.18.non.type.template.auto 2.18.non.type.template.auto.cpp)
add_executable(2.19.delegate.constructor 2.19.delegate.constructor.cpp)
add_executable(2.20.strong.type.enum 2.20.strong.type.enum.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
